# PythonProjectPS

./: .gitignore  Pipfile  README.md  data.sql  dodo.py  pyproject.toml  setup.cfg
habit/bot/: __init__.py  __main__.py  bot.py  test.py
habit/locale/ru/LC_MESSAGES/: messages.po
source/: conf.py  index.rst
