[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "habit-tracker"
version = "0.1.0"
description = "Habit tracking application with Telegram bot and FastAPI server"
authors = [
    { name = "_", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0.1",
    "aiosqlite>=0.17.0",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.8.4",
    "pandas>=2.2.2",
    "pydantic>=2.6.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "babel>=2.15.0",
]

[project.scripts]
habit-tracker-bot = "habit.bot.__main__:main"


[tool.setuptools.package-dir]
"habit" = "habit"



[tool.setuptools.package-data]
"habit" = ["locale/*/*/*.mo", "locale/*/*/*.po", "bot/*.py",
"docs/html/*.html",
"docs/html/**/*",]

